Fix License key textbox alignment issue.

--- a/assets/css/admin/addon-list.css
+++ b/assets/css/admin/addon-list.css
@@ -63,7 +63,7 @@
 	}
 }
 
-.bundle-license {
+.bundle-license, .el-license {
 	margin-bottom: 3%;
 }
 
